--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-.App {
+.Game {
   text-align: center;
+}
+
+.cell {
+  margin: 3px;
+  width: 60px;
+  height: 60px;
+  border: 3px solid black;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  font-size: 28px;
+  text-transform: capitalize;
+  line-height: 60px;
+}
+
+.cell.green {
+  background: green;
+}
+
+.cell.yellow {
+  background: yellow;
+}
+
+.cell.gray {
+  background: gray;
+}
+
+.CurWordRow.red .cell {
+  border-color: red;
 }
