--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .Game {
   text-align: center;
+  text-transform: capitalize;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cell {
@@ -11,7 +13,6 @@
   text-align: center;
   font-weight: bold;
   font-size: 28px;
-  text-transform: capitalize;
   line-height: 60px;
 }
 
