--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .Game {
   text-align: center;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  font-weight: bold;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -11,7 +12,6 @@
   border: 3px solid black;
   display: inline-block;
   text-align: center;
-  font-weight: bold;
   font-size: 28px;
   line-height: 60px;
 }
@@ -34,4 +34,8 @@
 
 h1 {
     font-size: 46px;
+}
+
+.final-word {
+  font-size: 36px;
 }
